Tue Feb 21 08:44:00 UTC 2023
Update
    Microsoft.NET.Test.Sdk to 17.5.0
Feature
    Add layer WebApi
+--------------------------+
Mon Feb 20 09:59:00 UTC 2023
Update
    MediatR to 12.0.0
Feature
    Add layer Infrastructure.Manager
    Add dump in code generator
    Add script runner (postgres)
    Add docker compose
Small change
    Change target sql database, sql server to postgres
+--------------------------+
Sat Feb 11 09:05:00 UTC 2023
Fix
    Code generator error in layer infrastructure
Feature
    Add unit tests to services and repositories
Small change
    Change class DomainValidationDto to DomainValidation, and moved place
+--------------------------+
Thu Feb 09 20:57:00 UTC 2023
Update
    Scrutor to 4.2.1
    SqlKata to 3.2.3
    SqlKata.Execution to 3.2.3
    Microsoft.NET.Test.Sdk to 17.4.1
    Moq to 4.18.4
    coverlet.collector to 3.2.0
Small change
    style of code same classes
+--------------------------+
Sat Feb 02 18:05:00 UTC 2023
Feature
    Add layer Infrastrutura
    Add layer UnitTest
Fix
    Code generator error in layer domain and templates
Improvment
    Add handler on code generator to Infrastrutura and UnitTests
    Alter way how validate model, remove fluent validation
+--------------------------+
Mon Jan 30 20:28:00 UTC 2023
Feature
    Add code generator
    Add layer Domain
+--------------------------+
Have fun!  :-)