@@ -1,4 +1,5 @@
 using System.ComponentModel.DataAnnotations;
+using Domain.Entities;
 
 namespace WebApi.Dtos;
 
