@@ -15,6 +15,8 @@ public class Put%##%Dto
 
     public %##% ToModel(%##% model)
     {
-        Model.Name = this.Name;
+        model.AlterName(this.Name);
+
+        return model;
     }
 }
